src/interface/src/styleguide/action-card/action-card.component.scss
@import 'mixins';
@import 'colors';

:host {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 16px;
  gap: 8px;

  border-radius: 8px;
  border: 1px solid $color-soft-gray;
  background: $color-white;

  /* shadow-md */
  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.16);
}

.svg-icon {
  display: inline-block;
  width: 24px;
  height: 24px;
  background-color: $color-standard-blue;
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
}

.card-header {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.text-area {
  display: flex;
  flex-direction: column;
  max-width: 380px;
  gap: 8px;
  justify-content: left;
  align-items: flex-start;
  height: 100%;
}

.icon {
  color: $color-standard-blue;
  min-width: 24px;
}

.title {
  @include small-input-label();
  margin: 0;
}

.description {
  @include small-paragraph();
  color: $color-md-gray;
}

